--- a/.github/workflows/quarterly-tag.yml
+++ b/.github/workflows/quarterly-tag.yml
@@ -14,15 +14,16 @@ jobs:
 
       - name: Create and Push Tag
         run: |
-          # Get current date in MMDDYYYY format
-          DATE=$(date +'%m%d%Y')
-          TAG_NAME="PRD_TAG_${DATE}"
+          # Set your application name here
+          APP_NAME="test_release_gate" 
+        
+          # Format: MMDDYYYY_HHMMSS (e.g., 01202026_143005)
+          TIMESTAMP=$(date +'%m%d%Y_%H%M%S')
+          TAG_NAME="PRD_TAG_${TIMESTAMP}"
           
-          # Configure Git
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          # Create and push the tag
-          echo "Creating tag: $TAG_NAME"
-          git tag -a "$TAG_NAME" -m "Automated quarterly release tag for $DATE"
+          echo "Generated Tag: $TAG_NAME"
+          git tag -a "$TAG_NAME" -m "Automated PRD release at $TIMESTAMP"
           git push origin "$TAG_NAME"
