--- a/.github/workflows/quarterly-tag.yml
+++ b/.github/workflows/quarterly-tag.yml
@@ -14,16 +14,22 @@ jobs:
 
       - name: Create and Push Tag
         run: |
-          # Set your application name here
-          APP_NAME="test_release_gate" 
-        
-          # Format: MMDDYYYY_HHMMSS (e.g., 01202026_143005)
+          # 1. Define your Application Name
+          APP_NAME="test-release-gate"
+          
+          # 2. Get 24-Hour Timestamp (MMDDYYYY_HHMMSS)
+          # %H = 24-hour clock (00..23)
+          # %M = Minute (00..59)
+          # %S = Second (00..60)
           TIMESTAMP=$(date +'%m%d%Y_%H%M%S')
+          
+          # 3. Construct Final Tag (e.g., YOUR_APP_NAME_PRD_TAG_01202026_093045)
           TAG_NAME="${APP_NAME}_PRD_TAG_${TIMESTAMP}"
           
+          # 4. Configure Git and push
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          echo "Generated Tag: $TAG_NAME"
-          git tag -a "$TAG_NAME" -m "Automated PRD release at $TIMESTAMP"
+          echo "Generated Tag Name: $TAG_NAME"
+          git tag -a "$TAG_NAME" -m "Automated release for $APP_NAME at $TIMESTAMP"
           git push origin "$TAG_NAME"
